--- a/src/css/global.css
+++ b/src/css/global.css
@@ -45,3 +45,9 @@ button[disabled] {
   opacity: 0.3;
   pointer-events: none;
 }
+
+@media(max-width: 600px) {
+  h1 {
+    font-size: 20px;
+  }
+}
