--- a/src/css/global.css
+++ b/src/css/global.css
@@ -27,7 +27,7 @@ h1, h6 {
   color: var(--color-text-title);
 }
 
-button {
+button[name="global"] {
   padding: 5px 15px;
   background-image: linear-gradient(to bottom right, var(--color-background-gradient2), var(--color-background-gradient1));
   color: var(--color-text-title);
@@ -44,6 +44,15 @@ button[disabled] {
   color: var(--color-disable-button);
   opacity: 0.3;
   pointer-events: none;
+}
+
+button[name="keyboard"] {
+  padding: 5px 15px;
+  background-image: linear-gradient(to bottom right, var(--color-background-gradient2), var(--color-background-gradient1));
+  color: var(--color-text-light);
+  cursor: pointer;
+  border: 1px solid var(--color-text-light);
+  border-radius: 5px;
 }
 
 @media(max-width: 600px) {
